# analytics-dashboard

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_api_key_hash_and_prefix_columns.py  f4f601938b39_create_projects_events_and_rollups_.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  events.py  health.py  projects.py  router.py  users.py  ws.py
backend/app/core/: config.py  exceptions.py  limiter.py  redis.py  security.py  stream.py  validators.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  event.py  project.py  user.py
backend/app/schemas/: analytics.py  auth.py  common.py  event.py  project.py  user.py
backend/app/services/: analytics_service.py  base.py  event_service.py  project_service.py  user_service.py
backend/scripts/: seed_events.py
backend/tests/: conftest.py  locustfile.py  test_analytics.py  test_auth.py  test_core.py  test_events.py  test_health.py  test_integration.py  test_projects.py  test_users.py
demo/: index.html
docs/: ARCHITECTURE.md  USER_TESTING_GUIDE.md
docs/plans/: 2026-02-10-analytics-dashboard-design.md
frontend/: .dockerignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/__tests__/: MetricCard.test.tsx  (+3 more)
sdk/: build.js
sdk/src/: tracker.js
(+17 files in other folders)
